--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-validator": "^6.12.2",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.12",
